--- a/index.html
+++ b/index.html
@@ -46,37 +46,37 @@
 		<a href="https://hopin.to/events/the-book-fair" target="_blank"><span class="title">The Book Fair</a></span>
 		
 		<br><br><br>
-		The Book Fair (04.26, 2-6PM EST <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg> )  is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.
+		<span class="important-01">The Book Fair (04.26, 2-6PM EST <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg> )  is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.</span>
 		<br><br>
 		<video playsinline  autoplay loop muted> 
 		  <source src="images/book-fair-01.mp4" type="video/mp4">		  
 		</video>
 		<br><br>
-		The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, and partly because using the power of the web helps democratize these talks. After the virtual event, the talks will be archived on The Stacks in their respective folders. Our first group of speakers on April 26th will be cofounder & partner at PLAYLAB Inc -  <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director - <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator & writer - <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
+		The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, and partly because using the power of the web helps democratize these talks. <span class="important-03">After the virtual event, the talks will be archived on The Stacks</span> in their respective folders. Our first group of speakers on April 26th will be cofounder & partner at PLAYLAB Inc -  <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director - <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator & writer - <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
 		<br><br> 
 		<a href="https://hopin.to/events/the-book-fair" target="_blank">RSVP for The Book Fair </a>	
 		<br><br> 
 	</li>
 	<li class="content">
-		<span class="title">The Stacks</span>
+		<span class="title important-01">The Stacks</span>
 		<br><br><br>
-		The Stacks is a digital public archive of things recommended by working creatives for anyone to root through and find inspiration.
+		<span class="important-01">The Stacks is a digital public archive of things recommended by working creatives for anyone to root through and find inspiration.</span>
 		<br><br>
 		<video playsinline  autoplay loop muted> 
 		  <source src="images/stacks-01.mp4" type="video/mp4">		  
 		</video>
 		<br><br>
-		Those things (books, films, videos, art, lectures, places, and people) are organized into folders bearing the names of creatives who’ve filled them. We hope their content can act as a catalyst for inquiry and learning. Launching on April 26th, along with The Book Fair, the goal is to create an ever-evolving depository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
+		Those things <span class="important-03">(books, films, videos, art, lectures, places, and people)</span> are organized into folders bearing the names of creatives who’ve filled them. We hope their content can act as a catalyst for inquiry and learning. <span class="important-03">Launching on April 26th,</span> along with The Book Fair, the goal is to create an ever-evolving depository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
 		<br><br> 
-		The Stacks will open on 04.26
+		<span class="important-01">The Stacks will open on 04.26</span>
 	</li>
 	<li class="last content" >
 		<br class="none"><br class="none"><br class="none"> 
 		The Publik Library is a collaborative initiative by <a href="http://schoooool.com/" target="_blank">School</a>, <a href="https://educated--guess.com/" target="_blank">Educated Guess</a>, and <a href="http://r-d.info/" target="_blank">Research + Development</a>.<br>
 		<br><br> 
 		<span class=""><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a>
-			<br><br> 
-			<br><br>the.publik.library@gmail.com
+		
+			<br><br><span class="important-03">the.publik.library@gmail.com</span>
 	</li>
 	
 
