--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		  <source src="images/stacks-01.mp4" type="video/mp4">		  
 		</video>
 		<br><br>
-		Those things <span class="important-03">(books, films, videos, art, lectures, places, and people)</span> are organized into folders bearing the names of creatives who’ve filled them. We hope their content can act as a catalyst for inquiry and learning. <span class="important-03">Launching on April 26th,</span> along with The Book Fair, the goal is to create an ever-evolving depository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
+		 <span class="important-03">Those things (books, films, videos, art, lectures, places, and people) are organized into folders</span> bearing the names of creatives who’ve filled them. We hope their content can act as a catalyst for inquiry and learning. <span class="important-03">Launching on April 26th,</span> along with The Book Fair, the goal is to create an ever-evolving depository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
 		<br><br> 
 		<span class="important-01">The Stacks will open on 04.26</span>
 	</li>
