--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 	<li class="content first none"><br></li>
 	<li class="content">
-		<a href="https://hopin.to/events/the-book-fair" target="_blank"><span class="title">The Book Fair</a></span>
+		<a href="https://hopin.to/events/the-book-fair" target="_blank"><span class="title">Book Fair</a></span>
 		
 		<br><br><br>
 		<span class="important-01">The Book Fair (04.26, 2-6PM EST <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg> )  is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.</span>
@@ -52,9 +52,9 @@
 		  <source src="images/book-fair-01.mp4" type="video/mp4">		  
 		</video>
 		<br><br>
-		The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, and partly because using the power of the web helps democratize these talks. <span class="important-03">After the virtual event, the talks will be archived on The Stacks</span> in their respective folders. Our first group of speakers on April 26th will be cofounder & partner at PLAYLAB Inc -  <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director - <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator & writer - <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
+		The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, and partly because using the power of the web helps democratize these talks. <span class="important-03">After the virtual event, the talks will be archived on The Stacks</span> in their respective folders. Our first group of speakers on <span class="important-01">April 26th</span> will be cofounder & partner at PLAYLAB Inc -  <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director - <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator & writer - <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
 		<br><br> 
-		<a href="https://hopin.to/events/the-book-fair" target="_blank">RSVP for The Book Fair </a>	
+		<a href="https://hopin.to/events/the-book-fair" target="_blank">RSVP for the Book Fair </a>	
 		<br><br> 
 	</li>
 	<li class="content">
@@ -66,13 +66,13 @@
 		  <source src="images/stacks-01.mp4" type="video/mp4">		  
 		</video>
 		<br><br>
-		 <span class="important-03">Those things (books, films, videos, art, lectures, places, and people) are organized into folders</span> bearing the names of creatives who’ve filled them. We hope their content can act as a catalyst for inquiry and learning. <span class="important-03">Launching on April 26th,</span> along with The Book Fair, the goal is to create an ever-evolving depository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
+		 <span class="important-03">Those things (books, films, videos, art, lectures, places, and people) are organized into folders</span> bearing the names of creatives who’ve filled them. We hope their content can act as a catalyst for inquiry and learning. <span class="important-01">Launching on April 26th,</span> along with The Book Fair, the goal is to create an ever-evolving depository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
 		<br><br> 
 		<span class="important-01">The Stacks will open on 04.26</span>
 	</li>
 	<li class="last content" >
 		<br class="none"><br class="none"><br class="none"> 
-		The Publik Library is a collaborative initiative by <a href="http://schoooool.com/" target="_blank">School</a>, <a href="https://educated--guess.com/" target="_blank">Educated Guess</a>, and <a href="http://r-d.info/" target="_blank">Research + Development</a>.<br>
+		Publik Library is a collaborative initiative by <a href="http://schoooool.com/" target="_blank">School</a>, <a href="https://educated--guess.com/" target="_blank">Educated Guess</a>, and <a href="http://r-d.info/" target="_blank">Research + Development</a>.<br>
 		<br><br> 
 		<span class=""><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a>
 		
