--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 	  <meta name="og:title" content="The Publik Library | A creative accessibility initiative">
 	  <meta name="og:description" content="The Publik Library is a shared initiative by School, Educated Guess, and Research + Development">
 	  <meta name="image" property="og:image" content="images/social-01.png"> 
+	  <meta property="og:image:width" content="1200" class="jsx-4238479239"/>
+		<meta property="og:image:height" content="600" class="jsx-4238479239"/>
 
 
 <!-- 	  
