--- a/index.html
+++ b/index.html
@@ -27,54 +27,11 @@
 
 	  <meta name="og:title" content="The Publik Library | A creative accessibility initiative">
 	  <meta name="og:description" content="The Publik Library is a shared initiative by School, Educated Guess, and Research + Development">
-	  <meta name="image" property="og:image" content="images/stacks-01.jpg"> 
+	  <meta name="image" property="og:image" content="images/social-02.png"> 
 	  <meta property="og:image:width" content="1200" class="jsx-4238479239"/>
 		<meta property="og:image:height" content="600" class="jsx-4238479239"/>
 
 
-<!-- 	  
-	  <meta name="name" content="The Publik Library">
-	  <meta name="description" content="The Publik Library is a shared initiative by School, Educated Guess, and Research + Development">
-	  <meta name="image" content="https://i.imgur.com/zPlrGYI.png">
-	  
-	  <meta itemprop="name" content="The Publik Library | A creative accessibility initiative">
-	  <meta itemprop="description" content="he Publik Library is a shared initiative by School, Educated Guess, and Research + Development">
-	  <meta itemprop="image" content="https://i.imgur.com/zPlrGYI.png">
-
-	  <meta name="twitter:card" content="summary">
-	  <meta name="twitter:title" content="The Publik Library | A creative accessibility initiative">
-	  <meta name="twitter:description" content="The Publik Library is a shared initiative by School, Educated Guess, and Research + Development">
-	  <meta name="twitter:image:src" content="https://i.imgur.com/zPlrGYI.png">
-
-	  <meta name="og:title" content="The Publik Library | A creative accessibility initiative">
-	  <meta name="og:description" content="The Publik Library is a shared initiative by School, Educated Guess, and Research + Development">
-	  <meta name="image" property="og:image" content="https://i.imgur.com/TRgcgru.png">  -->
-
-<!-- 
-<meta name="description" content="Public Works is a platform that showcases and archives monthly live streams from different creative studios, agencies &amp; companies that gives viewers a “day-in-the-life” perspective from places that are doing interesting work." class="jsx-4238479239"/>
-
-<link rel="icon" href="/static/img/favicon.ico" class="jsx-4238479239"/>
-<link rel="shortcut icon" href="/static/img/favicon.ico" class="jsx-4238479239"/>
-
-<meta itemProp="name" content="School | A design studio that makes things for people to chew on." class="jsx-4238479239"/>
-<meta itemProp="description" content="Public Works is a platform that showcases and archives monthly live streams from different creative studios, agencies &amp; companies that gives viewers a “day-in-the-life” perspective from places that are doing interesting work." class="jsx-4238479239"/>
-<meta itemProp="image" content="https://publicwooooorks.tv/static/img/pw-seo.png" class="jsx-4238479239"/>
-
-<meta name="twitter:card" content="summary_large_image" class="jsx-4238479239"/>
-<meta name="twitter:title" content="Public Works | A School Project™" class="jsx-4238479239"/>
-<meta name="twitter:description" content="Public Works is a platform that showcases and archives monthly live streams from different creative studios, agencies &amp; companies that gives viewers a “day-in-the-life” perspective from places that are doing interesting work." class="jsx-4238479239"/>
-<meta name="twitter:image:src" content="https://publicwooooorks.tv/static/img/pw-seo.png" class="jsx-4238479239"/>
-<meta name="og:title" content="Public Works | A School Project™" class="jsx-4238479239"/>
-<meta name="og:description" content="Public Works is a platform that showcases and archives monthly live streams from different creative studios, agencies &amp; companies that gives viewers a “day-in-the-life” perspective from places that are doing interesting work." class="jsx-4238479239"/>
-
-<meta name="image" property="og:image" content="https://publicwooooorks.tv/static/img/pw-seo-og.png" class="jsx-4238479239"/>
-<meta property="og:image:width" content="1200" class="jsx-4238479239"/>
-<meta property="og:image:height" content="600" class="jsx-4238479239"/>
-
-<meta name="og:url" content="https://publicwooooorks.tv" class="jsx-4238479239"/>
-<meta name="og:site_name" content="Public Works" class="jsx-4238479239"/>
-<meta name="og:type" content="website" class="jsx-4238479239"/>
-<meta name="next-head-count" content="21"/> -->
 
 </head>
 <body>
