--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 </head>
 <body>
 	<div id="key">
+		<span class="title">Information</span><br><br>
 		<span class="link">LINKS</span><br>
-		<span class="important-01">1<sup>st</sup> PRIORITY</span><br>
-		<span class="important-03">2<sup>nd</sup> PRIORITY</span>
+		<span class="important-01">primary</span><br>
+		<span class="important-03">secondary</span>
+		<span class="">tertiary</span>
 
 	</div>
 
