--- a/index.html
+++ b/index.html
@@ -35,14 +35,7 @@
 
 </head>
 <body>
-	<div id="key">
-		<span class="title">Information</span><br><br>
-		<span class="link">LINKS</span><br>
-		<span class="important-01">primary</span><br>
-		<span class="important-03">secondary</span>
-		<span class="">tertiary</span>
 
-	</div>
 
 <ul>
 	<!-- row 01 -->
@@ -95,13 +88,22 @@
 
 	<!-- row 03 -->
 
-	<li class="first"><br><br></li>
+	<li class="first none"><br><br></li>
 	<li class="none"><br></li>
 	<li class="none"><br></li>
 	<li class="last none"><br></li>
 </ul>
 
 <!-- outside -->
+
+<div id="key">
+		<span class="title">Information</span><br><br>
+		<span class="link">LINKS</span><br>
+		<span class="important-01">primary</span><br>
+		<span class="important-03">secondary</span>
+		<span class="">tertiary</span>
+
+	</div>
 
 <p id="copyright"> ©(Y)ours 2020</p>
 
