--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 		<span class="link">LINKS</span><br>
 		<span class="important-01">primary</span><br>
 		<span class="important-03">secondary</span>
-		<span class="">tertiary</span>
+		<span class="">tertiary</span><br>
+		<span class="">soon <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg></span>
 
 	</div>
 
