--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<span class="title">Information</span><br><br>
 		<span class="link">LINKS</span><br>
 		<span class="important-01">primary</span><br>
-		<span class="important-03">secondary</span>
+		<span class="important-03">secondary</span><br>
 		<span class="">tertiary</span><br>
 		<span class="">soon <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg></span>
 
