--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <!-- outside -->
 
 <div id="key">
-		<span class="title">Information</span><br><br>
+		<!-- <span class="title">system</span><br><br> -->
 		<span class="link">LINKS</span><br>
 		<span class="important-01">primary</span><br>
 		<span class="important-03">secondary</span><br>
