--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
 	  <meta name="name" content="The Publik Library">
 	  <meta name="description" content="The Publik Library is a shared initiative by School, Educated Guess, and Research + Development">
-	  <meta name="image" content="images/social-01.png">
+	  <meta name="image" content="images/stacks-01.jpg">
 	  
 	  <meta itemprop="name" content="The Publik Library | A creative accessibility initiative">
 	  <meta itemprop="description" content="he Publik Library is a shared initiative by School, Educated Guess, and Research + Development">
-	  <meta itemprop="image" content="images/social-01.png">
+	  <meta itemprop="image" content="images/stacks-01.jpg">
 
 	  <meta name="twitter:card" content="summary">
 	  <meta name="twitter:title" content="The Publik Library | A creative accessibility initiative">
 	  <meta name="twitter:description" content="The Publik Library is a shared initiative by School, Educated Guess, and Research + Development">
-	  <meta name="twitter:image:src" content="images/social-01.png">
+	  <meta name="twitter:image:src" content="images/stacks-01.jpg">
 
 	  <meta name="og:title" content="The Publik Library | A creative accessibility initiative">
 	  <meta name="og:description" content="The Publik Library is a shared initiative by School, Educated Guess, and Research + Development">
-	  <meta name="image" property="og:image" content="images/social-01.png"> 
+	  <meta name="image" property="og:image" content="images/stacks-01.jpg"> 
 	  <meta property="og:image:width" content="1200" class="jsx-4238479239"/>
 		<meta property="og:image:height" content="600" class="jsx-4238479239"/>
 
