--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		 <span class="important-03">Those things (books, films, videos, art, lectures, places, and people) are organized into folders</span> bearing the names of creatives who’ve filled them. We hope their content can act as a catalyst for inquiry and learning. <span class="important-01">Launching on April 26th,</span> along with The Book Fair, the goal is to create an ever-evolving depository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
 		<br><br> 
 		<span class="important-01">The Stacks will open on 04.26</span>
-		
+
 		
 	</li>
 	<li class="content">
@@ -99,7 +99,7 @@
 <!-- outside -->
 
 <div id="key">
-		<!-- <span class="title">system</span><br><br> -->
+		<span class="title">read:</span><br><br>
 		<span class="link">LINKS</span><br>
 		<span class="important-01">primary</span><br>
 		<span class="important-03">secondary</span><br>
