--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		
 	</li>
 	<li class="content">
-		<a href="https://hopin.to/events/the-book-fair" target="_blank"><span class="title">Book Fair</a></span>
+		<a href="https://hopin.to/events/the-book-fair" target="_blank"><span class="title">The Book Fair</a></span>
 		
 		<br><br><br>
 		<span class="important-01">The Book Fair (04.26, 2-6PM EST <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg> )  is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.</span>
