--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		  <source src="images/book-fair-01.mp4" type="video/mp4">	
 
 		</video>
-		<sup>Animation by <a href="http://zuhengyin.com/" target="_blank">Zuheng Yin</a></sup>
+		<sup>c/o <a href="http://zuhengyin.com/" target="_blank">Zuheng Yin</a></sup>
 		<br><br>
 		The Book Fair is <span class="important-01">open and free to the public</span>. The virtual nature of these events are partly fueled by the situation we find ourselves in, and partly because using the power of the web helps democratize these talks. <span class="important-03">After the virtual event, the talks will be archived on The Stacks</span> in their respective folders. Our first group of speakers on <span class="important-01">April 26th</span> will be cofounder & partner at PLAYLAB Inc -  <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director - <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator & writer - <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
 		<br><br> 
