--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	</li>
 	<li class="last content" >
 		<br class="none"><br class="none"><br class="none"> 
-		Publik Library is a collaborative initiative by <a href="http://schoooool.com/" target="_blank">School</a>, <a href="https://educated--guess.com/" target="_blank">Educated Guess</a>, and <a href="http://r-d.info/" target="_blank">Research + Development</a>.<br>
+		The Publik Library is a creative accessibility initiative collaboratively initiated by <a href="http://schoooool.com/" target="_blank">School</a>, <a href="https://educated--guess.com/" target="_blank">Educated Guess</a>, and <a href="http://r-d.info/" target="_blank">Research + Development</a>.<br>
 		<br><br> 
 		<span class=""><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a>
 		
