--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<li class="content first none"><br></li>
 	<li class="content">
 		<a href="https://hopin.to/events/the-book-fair" target="_blank"><span class="title">The Book Fair</a>
-			<span class="important-01"><br>Zoom meeting ID: 960 4533 0276 <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg> </span>
+			<span class="important-01"><br>Zoom ID: 960 4533 0276 <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg> </span>
 		
 		<br><br>
 		<span class="important-01">The Book Fair (04.26, 2-6PM EST)  is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.</span>
