--- a/index.html
+++ b/index.html
@@ -49,11 +49,29 @@
 
 	<li class="content first none"><br></li>
 	<li class="content">
-		<a href="https://hopin.to/events/the-book-fair" target="_blank"><span class="title">The Book Fair</a>
-			<span class="important-01"><br>Zoom ID: 960 4533 0276 <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg> </span>
-		
+
+		<span class="title important-01"><<!-- a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" blank="_blank" > -->The Stacks</a></span>
+		<br><br><br>
+		<span class="important-01">The Stacks is a digital public archive of things recommended by working creatives for anyone to dig through and find inspiration.</span>
 		<br><br>
-		<span class="important-01">The Book Fair (04.26, 2-6PM EST)  is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.</span>
+		<video playsinline  autoplay loop muted> 
+		  <source src="images/stacks-01.mp4" type="video/mp4">		  
+		</video>
+		<br><br>
+		 <span class="important-03">Those things (books, films, videos, art, lectures, places, and people) are organized into cards bearing the names of creatives who’ve filled them.</span>  We hope their content can act as a catalyst for inquiry and learning. The goal is to create an ever-evolving repository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
+		<br><br> 
+
+		<!-- <span class="important-01"><a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" blank="_blank" >Visit The Stacks</a></span> -->
+
+
+	</li>
+	<li class="content">
+	 
+		<!-- <a href="https://hopin.to/events/the-book-fair" target="_blank"> -->The Book Fair<!-- </a> -->
+<!-- 			<span class="important-01"><br>Zoom ID: 960 4533 0276 <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg> </span>
+ -->		
+		<br><br><br>
+		<span class="important-01">The Book Fair <!-- 001 (04.26, 2-6PM EST) --> is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.</span>
 		<br><br>
 		<video playsinline  autoplay loop muted> 
 		  <source src="images/book-fair-01.mp4" type="video/mp4">	
@@ -63,24 +81,9 @@
 		<br><br>
 		The Book Fair is <span class="important-01">open and free to the public</span>. The virtual nature of these events are partly fueled by the situation we find ourselves in, and partly because using the power of the web helps democratize these talks. <span class="important-03">After the virtual event, the talks will be archived on The Stacks</span> in their respective folders. On <span class="important-01">April 26th</span>, our first group of speakers will be <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a> - cofounder & partner at PLAYLAB Inc, <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a> - illustrator & art director, <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a> - artist & partner at School, and <a href="https://high.org/" target="_blank">Kristie Swink Benson</a> - director of communications at the High Museum of Art.
 		<br><br> 
-		<a href="https://hopin.to/events/the-book-fair" target="_blank">RSVP for the Book Fair </a>	
+		<!-- <a href="https://hopin.to/events/the-book-fair" target="_blank">RSVP for the Book Fair </a>	 -->
 		<br><br>		
-	</li>
-	<li class="content">
-	 
 
-		<span class="title important-01">The Stacks</span>
-		<br><br><br>
-		<span class="important-01">The Stacks is a digital public archive of things recommended by working creatives for anyone to dig through and find inspiration.</span>
-		<br><br>
-		<video playsinline  autoplay loop muted> 
-		  <source src="images/stacks-01.mp4" type="video/mp4">		  
-		</video>
-		<br><br>
-		 <span class="important-03">Those things (books, films, videos, art, lectures, places, and people) are organized into folders</span> bearing the names of creatives who’ve filled them. We hope their content can act as a catalyst for inquiry and learning. <span class="important-01">Launching on April 26th,</span> along with The Book Fair, the goal is to create an ever-evolving repository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
-		<br><br> 
-
-		<span class="important-01">The Stacks will open on 04.26</span>
 	</li>
 	<li class="last content" >
 		<br class="none"><br class="none"><br class="none"> 
