--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<li class="content first none"><br></li>
 	<li class="content">
 
-		<span class="title important-01"><<!-- a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" blank="_blank" > -->The Stacks</a></span>
+		<span class="title important-01"><!-- <a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" blank="_blank" > -->The Stacks</a></span>
 		<br><br><br>
 		<span class="important-01">The Stacks is a digital public archive of things recommended by working creatives for anyone to dig through and find inspiration.</span>
 		<br><br>
