--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<li class="content first none"><br></li>
 	<li class="content">
 
-		<span class="title important-01"><!-- <a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" blank="_blank" > -->The Stacks</a></span>
+		<span class="title important-01"><a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" blank="_blank" >The Stacks</a></span>
 		<br><br><br>
 		<span class="important-01">The Stacks is a digital public archive of things recommended by working creatives for anyone to dig through and find inspiration.</span>
 		<br><br>
@@ -61,7 +61,7 @@
 		 <span class="important-03">Those things (books, films, videos, art, lectures, places, and people) are organized into cards bearing the names of creatives who’ve filled them.</span>  We hope their content can act as a catalyst for inquiry and learning. The goal is to create an ever-evolving repository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
 		<br><br> 
 
-		<!-- <span class="important-01"><a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" blank="_blank" >Visit The Stacks</a></span> -->
+		<span class="important-01"><a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" blank="_blank" >Visit The Stacks</a></span>
 
 
 	</li>
