--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -35,7 +36,7 @@
 
 </head>
 <body>
-
+	
 
 <ul>
 	<!-- row 01 -->
@@ -44,13 +45,43 @@
 	<li class="none"><br></li>
 	<li class="none"><br></li>
 	<li class="last none"><br></li>
+</ul>
+
+<div id="toc">
+		<span class="title">Contents</span>
+		<br><br><br class="none">
+		<sup>000 - What is The Publik Library?</sup><br>
+		<sup>001 - Book Fair</sup><br>
+		<sup>002 - The Stacks</sup><br>
+		<sup>003 - Book Fair I</sup><br>
+	</div>
 
 	<!-- row 02 -->
-
-	<li class="content first none"><br></li>
+<ul>
+	<li class="content first none">
+		<!-- <span class="title">Notes</span> -->
+		<!-- <br><br><br> -->
+	
+		
+	</li>
 	<li class="content">
-
-		<span class="title important-01"><a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" blank="_blank" >The Stacks</a></span>
+		<span class="important-01 title"><a href="https://drive.google.com/drive/folders/1L8Ojq294HmvmSC-wHrzhYLr_BMIRSceF?usp=sharing" target="_blank">003 - Book Fair I</a></span>
+		<br><br><br>
+		On April 26th, 2020, our first group of speakers at the Book Fair included <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a> - artist & partner at <a href="https://schoooool.com/" target="_blank">School</a>, <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a> - illustrator & art director, <a href="https://high.org/" target="_blank">Kristie Swink Benson</a> - director of communications at the <a href="https://high.org/" target="_blank">High Museum of Art</a>, and </span><a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a> - cofounder & partner at <a href="https://www.playlab.org/" target="_blank">PLAYLAB, INC.</a>
+		<br><br>
+			<sup>Andrew Herzog</sup><br>
+		<img src="images/bf-01-ah.jpg"/><br>
+			<sup>Simone Noronha</sup><br>
+		<img src="images/bf-01-sn.jpg"/><br>
+			<sup>Kristie Swink Benson</sup><br>
+		<img src="images/bf-01-ksb.jpg"/><br>
+			<sup>Archie Lee Coates IV</sup><br>
+		<img src="images/bf-01-alc.jpg"/><br><br>
+		<a href="https://drive.google.com/drive/folders/1L8Ojq294HmvmSC-wHrzhYLr_BMIRSceF?usp=sharing" target="_blank">Watch</a>	
+		<br><br>			
+	</li>
+	<li class="content">
+	 	<span class="title important-01"><a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" target="_blank" >002 - The Stacks</a></span>
 		<br><br><br>
 		<span class="important-01">The Stacks is a digital public archive of things recommended by working creatives for anyone to dig through and find inspiration.</span>
 		<br><br>
@@ -61,15 +92,12 @@
 		 <span class="important-03">Those things (books, films, videos, art, lectures, places, and people) are organized into cards bearing the names of creatives who’ve filled them.</span>  We hope their content can act as a catalyst for inquiry and learning. The goal is to create an ever-evolving repository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
 		<br><br> 
 
-		<span class="important-01"><a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" blank="_blank" >Visit The Stacks</a></span>
-
+		<span class="important-01"><a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" target="_blank" >Visit The Stacks</a></span>
 
 	</li>
-	<li class="content">
-	 
-		<!-- <a href="https://hopin.to/events/the-book-fair" target="_blank"> -->The Book Fair<!-- </a> -->
-<!-- 			<span class="important-01"><br>Zoom ID: 960 4533 0276 <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg> </span>
- -->		
+	<li class="last content" >
+		
+		<span class="important-01 title">001 - Book Fair</span>
 		<br><br><br>
 		<span class="important-01">The Book Fair <!-- 001 (04.26, 2-6PM EST) --> is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.</span>
 		<br><br>
@@ -79,43 +107,55 @@
 		</video>
 		<sup>c/o <a href="http://zuhengyin.com/" target="_blank">Zuheng Yin</a></sup>
 		<br><br>
-		The Book Fair is <span class="important-01">open and free to the public</span>. The virtual nature of these events are partly fueled by the situation we find ourselves in, and partly because using the power of the web helps democratize these talks. <span class="important-03">After the virtual event, the talks will be archived on The Stacks</span> in their respective folders. On <span class="important-01">April 26th</span>, our first group of speakers will be <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a> - cofounder & partner at PLAYLAB Inc, <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a> - illustrator & art director, <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a> - artist & partner at School, and <a href="https://high.org/" target="_blank">Kristie Swink Benson</a> - director of communications at the High Museum of Art.
+		The Book Fair is <span class="important-01">open and free to the public</span>. The virtual nature of these events are partly fueled by the situation we find ourselves in, and partly because using the power of the web helps democratize these talks. <span class="important-03">After the virtual event, the talks will be archived on The Stacks</span> in their respective folders.<!--  On <span class="important-01">April 26th</span>, our first group of speakers will be <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a> - cofounder & partner at PLAYLAB Inc, <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a> - illustrator & art director, <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a> - artist & partner at School, and <a href="https://high.org/" target="_blank">Kristie Swink Benson</a> - director of communications at the High Museum of Art. -->
 		<br><br> 
 		<!-- <a href="https://hopin.to/events/the-book-fair" target="_blank">RSVP for the Book Fair </a>	 -->
-		<br><br>		
-
+		<br><br>	
 	</li>
-	<li class="last content" >
-		<br class="none"><br class="none"><br class="none"> 
-		The Publik Library is a creative accessibility initiative collaboratively initiated by <a href="http://schoooool.com/" target="_blank">School</a>, <a href="https://educated--guess.com/" target="_blank">Educated Guess</a>, and <a href="http://r-d.info/" target="_blank">Research + Development</a>.<br>
+</ul>
+
+<!-- divider -->
+<ul>	
+	<li class="divider"></li>
+</ul>	
+
+
+<!-- row 03 -->
+<ul>
+	<li class="first none"><br><br></li>
+	<li class="content"><br>
+		<span class="title">000 - The Publik Library?</span>
+		<br><br>
+		The Publik Library is a <span class=" important-01">creative accessibility</span> initiative collaboratively initiated by <a href="http://schoooool.com/" target="_blank">School</a>, <a href="https://educated--guess.com/" target="_blank">Educated Guess</a>, and <a href="http://r-d.info/" target="_blank">Research + Development</a>.<br>
 		<br><br> 
 		<span class=""><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a>
 		
 			<br><br><span class="important-03">the.publik.library@gmail.com</span>
 	</li>
-	
-
-	<!-- row 03 -->
-
-	<li class="first none"><br><br></li>
-	<li class="none"><br></li>
 	<li class="none"><br></li>
 	<li class="last none"><br></li>
 </ul>
 
-<!-- outside -->
-
 <div id="key">
-		<span class="title">read:</span><br><br>
-		<span class="link">LINKS</span><br>
+		<!-- <span class="title">read:</span><br><br> -->
+		<sup><span class="link">LINKS</span><br>
 		<span class="important-01">primary</span><br>
 		<span class="important-03">secondary</span><br>
 		<span class="">tertiary</span><br>
-		<span class="">soon <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg></span>
+		<span class="">soon <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg></span></sup>
 
-	</div>
+</div>
 
-<p id="copyright"> ©(Y)ours 2020</p>
+<!-- divider -->
+<ul>	
+	<li class="divider"><p id="copyright"> ©(Y)ours 2020</p></li>
+</ul>	
+
+<!-- outside -->
+
+
+
+
 
 </body>
 </html>	
