--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div id="toc">
 		<span class="title">Contents</span>
 		<br><br><br class="none">
-		<sup>000 - What is The Publik Library?</sup><br>
+		<sup>000 - The Publik Library?</sup><br>
 		<sup>001 - Book Fair</sup><br>
 		<sup>002 - The Stacks</sup><br>
 		<sup>003 - Book Fair I</sup><br>
