--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </ul>
 
 <div id="toc">
-		<span class="title">Contents</span>
+		<span class="title important-01">Contents</span>
 		<br><br><br class="none">
 		<sup>000 - The Publik Library?</sup><br>
 		<sup>001 - Book Fair</sup><br>
@@ -124,7 +124,7 @@
 <ul>
 	<li class="first none"><br><br></li>
 	<li class="content"><br>
-		<span class="title">000 - The Publik Library?</span>
+		<span class="title important-01">000 - The Publik Library?</span>
 		<br><br>
 		The Publik Library is a <span class=" important-01">creative accessibility</span> initiative collaboratively initiated by <a href="http://schoooool.com/" target="_blank">School</a>, <a href="https://educated--guess.com/" target="_blank">Educated Guess</a>, and <a href="http://r-d.info/" target="_blank">Research + Development</a>.<br>
 		<br><br> 
